GNOME Bugzilla – Bug 658172
The effect when grabbing the whole screen is ugly and doesn't have fade in/out
Last modified: 2011-09-16 19:40:55 UTC
Comparing alt+printscreen and print screen it seems that when grabbing the whole screen the fade in to white and fade out to transparent is not used. I only see a white screen for a second. I have a 1280x800 screen and a fullscreen window that I'm capturing gnome-utils 3.1.90
I can confirm, same with a 1366x768 screen and gnome-utils 3.1.90 (and gnome-shell 3.1.90.1 obviously). When printing screen in fullscreen mode, my wallpaper appears in front of all things 2 times for ~1 second. However, it does a small effect with a white fade out when capturing only a window (fullscreen or not). I think it was right in 3.1.5 (ie there was the same effect with a fullscreen catpure)
Confirming.
It appears to also be gray here instead of white.
This is now fixed. Note that you need this fix for Mutter as well in order to make it work properly. http://git.gnome.org/browse/mutter/commit/?id=abde64cb0ca93789bbdc11749943c145c806e8ff