flash: don't use a solid color for the max flash window opacity

Mutter will unredirect our window thinking it's a full screen game
otherwise.

https://bugzilla.gnome.org/show_bug.cgi?id=658172